# currently-fronting

./: CMakeLists.txt  LICENSE  README.md  config.json
platform/icon/: emmen.kra  fronting-16.ase  fronting-32.ase  fronting-icon.xcf
platform/linux/: currently-fronting.desktop  currently-fronting.service
platform/linux/arch/: PKGBUILD
platform/linux/debian/: control
platform/win32/: resource.rc
src/: common.c  common.h  config.c  config.h  discord.c  discord.h  main.c  manual.c  manual.h  pluralkit.c  pluralkit.h  simplyplural.c  simplyplural.h  system.h  web.c  web.h
